# mmedit

./: CMakeLists.txt  README-compilacia.txt  README.md  debcreate  doit  mmedit-0.35.deb
.config/mmedit/: custom.css  mmedit.ini
.github/workflows/: build.yml  create_release.yml
cmake/: Packaging.cmake  PackagingLinux.cmake
deploy/linux/: com.github.rosmapo.mmedit.metainfo.xml  mmedit.desktop
doc/: Building.md
i18n/: mmedit_sk.ts
src/: ApplicationSettings.cpp  ApplicationSettings.h  CMakeLists.txt  DockedEditor.cpp  DockedEditor.h  EditorManager.cpp  EditorManager.h  LuaState.cpp  MinimapPanel.cpp  MinimapPanel.h  NotepadNextApplication.cpp  NotepadNextApplication.h  ScintillaNext.cpp.orig  ScintillaNext.h  main.cpp  resources.qrc
src/decorators/: BookMarkDecorator.cpp  MarkerAppDecorator.cpp  MarkerAppDecorator.h  SmartHighlighter.cpp  SpellChecker.cpp  SpellChecker.h
src/dialogs/: ColorPickerDialog.cpp  ColorPickerDialog.h  FindReplaceDialog.cpp  MainWindow.cpp  MainWindow.cpp.orig  MainWindow.h  MainWindow.ui  MainWindow.ui.orig  PreferencesDialog.cpp  PreferencesDialog.cpp.bak  PreferencesDialog.ui  PreferencesDialog.ui.bak  ShortcutEditorDialog.cpp  ShortcutEditorDialog.h  WordCountDialog.cpp  WordCountDialog.h
src/docks/: MarkdownPreviewDock.cpp  MarkdownPreviewDock.h  SearchResultsDock.cpp
src/languages/: abaqus.lua  actionscript.lua  ada.lua  asm.lua  asn1.lua  asp.lua  autoit.lua  avs.lua  baanc.lua  bash.lua  batch.lua  blitzbasic.lua  c.lua  caml.lua  cmake.lua  cobol.lua  coffeescript.lua  cpp.lua  cs.lua  csound.lua  css.lua  d.lua  go.lua  (+63 more)
(+49 files in other folders)
